--- a/src/components/PostPage/postpage.scss
+++ b/src/components/PostPage/postpage.scss
@@ -3,6 +3,7 @@
 .PostPage {
     width: 100%;
     max-width: 800px;
+    padding: 30px;
     margin-bottom: 5em;
     opacity: 0;
     animation: fadeUpSmall 500ms forwards ease;
